--- a/Web/packages.config
+++ b/Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AmplifyJS" version="1.0.0" targetFramework="net45" />
   <package id="Autofac" version="2.6.3.862" targetFramework="net45" />
   <package id="Autofac.Mvc4" version="2.6.2.859" targetFramework="net45" />
   <package id="Autofac.WebApi" version="2.6.2.859" targetFramework="net45" />
