--- a/Web/packages.config
+++ b/Web/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AmplifyJS" version="1.0.0" targetFramework="net45" />
+  <package id="AspNetMvc" version="4.0.20710.0" targetFramework="net45" />
+  <package id="AspNetWebApi" version="4.0.20710.0" targetFramework="net45" />
+  <package id="AspNetWebApi.Data" version="4.0.20221.15125" targetFramework="net45" />
   <package id="Autofac" version="2.6.3.862" targetFramework="net45" />
   <package id="Autofac.Mvc4" version="2.6.2.859" targetFramework="net45" />
   <package id="Autofac.WebApi" version="2.6.2.859" targetFramework="net45" />
@@ -31,7 +34,10 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.5.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.9" targetFramework="net45" />
   <package id="Sammy.js" version="0.6.3" targetFramework="net45" />
+  <package id="SinglePageApplication" version="4.0.20221.15125" targetFramework="net45" />
+  <package id="SinglePageApplication.CSharp" version="4.0.20221.15125" targetFramework="net45" />
+  <package id="Upshot" version="1.0.0.2" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
