WebAPI exposes PUT methods
Replaced POST with PUT.

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -19,7 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5">
+    <compilation debug="false" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Web.Http.Data.Helpers, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </assemblies>
